[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["SuperCoder <supercoder@superagi.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
logging = "^0.4.9.6"
flask-sqlalchemy = "^3.1.1"
alembic = "^1.13.1"
flask-migrate = "^4.0.7"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
